--- a/css/contact.sass
+++ b/css/contact.sass
@@ -11,10 +11,10 @@ $mm: var(--p-med)
 
 $ml: calc(2.0 * var(--m-med))
 
-.contact header nav
+.container-about header nav
     background-color: black
 
-.contact main
+.container-about main
     display: grid
     width: 100vw
     justify-items: stretch
