--- a/css/store.sass
+++ b/css/store.sass
@@ -1,6 +1,6 @@
 @use 'include/mixins/flex'
 
-body.store
+.container-store
     background: top / 100% no-repeat url("../resources/much.jpg")
 
 main.store
@@ -30,10 +30,11 @@ main.store
             height: 5vh
             left: 0px
 
-            a
+            .showcase-button
                 display: block
                 cursor: pointer
                 width: 2vw
+                height: 2vw
                 box-shadow: 0.4rem 0.4rem 0.1rem black
                 background-color: white
                 border-radius: 2.5vw
