--- a/css/store.css
+++ b/css/store.css
@@ -1,4 +1,4 @@
-body.store {
+@use 'include/mixins/flex' {}.container-store {
   background: top/100% no-repeat url("../resources/much.jpg");
 }
 
@@ -7,22 +7,34 @@ main.store {
   position: relative;
   width: 100vw;
 }
+
 main.store article.slideshow {
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
   border-bottom: 1px solid black;
 }
+
 @media (max-width: 768px) {
   main.store article.slideshow {
     top: 0px;
   }
 }
+
 main.store article.slideshow legend {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   gap: 0.1rem;
   position: absolute;
@@ -31,27 +43,33 @@ main.store article.slideshow legend {
   height: 5vh;
   left: 0px;
 }
-main.store article.slideshow legend a {
+
+main.store article.slideshow legend .showcase-button {
   display: block;
   cursor: pointer;
   width: 2vw;
-  box-shadow: 0.4rem 0.4rem 0.1rem black;
+  height: 2vw;
+  -webkit-box-shadow: 0.4rem 0.4rem 0.1rem black;
+          box-shadow: 0.4rem 0.4rem 0.1rem black;
   background-color: white;
   border-radius: 2.5vw;
   border: 1px solid black;
 }
-main.store article.slideshow legend a:hover {
+
+main.store article.slideshow legend .showcase-button:hover {
   background-color: black;
   border-width: 3px;
   border-color: white;
 }
+
 @media (orientation: portrait) and (max-width: 768px) {
-  main.store article.slideshow legend a {
+  main.store article.slideshow legend .showcase-button {
     width: 7vw;
     height: 7vw;
     border-radius: 4.5vw;
   }
 }
+
 main.store article.slideshow div.showcase {
   display: block;
   text-align: center;
@@ -59,72 +77,66 @@ main.store article.slideshow div.showcase {
   height: 60vh;
   scroll-behavior: smooth;
 }
+
 @media (orientation: landscape) and (max-width: 768px) {
   main.store article.slideshow div.showcase {
     height: 90vh;
   }
 }
+
 main.store article.slideshow div.showcase section.store {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0px 1em;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   height: 60vh;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 @media (orientation: portrait) and (max-width: 768px) {
   main.store article.slideshow div.showcase section.store {
-    flex-direction: column;
-    justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
+
 @media (orientation: landscape) and (max-width: 768px) {
   main.store article.slideshow div.showcase section.store {
     height: 90vh;
   }
 }
+
 main.store article.slideshow div.showcase section.store [role=img] {
   font-size: 300%;
   margin-top: 3rem;
 }
+
 main.store article.slideshow div.showcase section.store [role=presentation] {
   padding: 1em;
   border: 1px solid black;
   background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: stretch;
-  justify-content: stretch;
-  align-content: flex-start;
-  box-shadow: 0.2rem 0.2rem 0.1rem black;
-}
-main.store article.slideshow div.showcase section.store [role=presentation] h4 {
-  font-weight: 100;
-  font-size: xxx-large;
-}
-main.store article.slideshow div.showcase section.store [role=presentation] p {
-  font-size: x-large;
-}
-main.store article.slideshow div.showcase section.store [role=presentation] quote {
-  font-style: italic;
-}
-main.store article.slideshow div.showcase section.store [role=presentation] button {
-  color: var(--color-background);
-  background: unset;
-  border: unset;
-  box-shadow: unset;
-}
-main.store article.slideshow div.showcase section.store [role=presentation] button p {
-  background: #ffc44d;
-  box-shadow: 0.2rem 0.2rem 0.1rem black;
-  padding: var(--p-small);
-  border: 1px solid black;
-  border-radius: var(--p-small);
-  font-weight: 300;
-  font-size: calc(2 * var(--nav-size));
-}
-/*# sourceMappingURL=store.css.map */   flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
