--- a/css/splash.css
+++ b/css/splash.css
@@ -1,8 +1,11 @@
-.splash-screen {
+@use "sass:math" {}@use "sass:color" {}.splash-screen {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   color: var(--color-header);
   background: top/100% no-repeat url("../resources/much.jpg");
 }
+
 @media (max-width: 750px) {
   .splash-screen h1 {
     text-align: center;
@@ -18,28 +21,32 @@
   .splash-screen {
     position: relative;
     background: top/100% no-repeat url("../resources/much.jpg");
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
     height: 85vh;
   }
   .splash-screen h1 {
-    flex: 1;
-    -webkit-background-clip: text;
-            background-clip: text;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    background-clip: text;
     font-weight: 900;
     font-size: 900%;
     width: 1em;
     text-transform: uppercase;
     padding-top: 0.1em;
-    -webkit-animation: 2s ease-in both osc;
-            animation: 2s ease-in both osc;
   }
   @-webkit-keyframes osc {
     0% {
       text-shadow: 0px 0px 0px #990000;
     }
     100% {
-      text-shadow: 0.04em 0em 0em black, 0.04em 0.04em 0em black, 0.1em 0em 0px #006699, 0.2em 0.0809016994em 0px #000a99, 0.3em 0.0618033989em 0px #520099, 0.4em -0.0927050983em 0px #990085, 0.5em -0.3236067977em 0px #990029, 0.6em -0.5em 0px #993300, 0.7em -0.4854101966em 0px #998f00, 0.8em -0.2163118961em 0px #479900, 0.9em 0.2472135955em 0px #009914, 1em 0.7281152949em 0px #009970, 1.1em 1em 0px #006699;
+      text-shadow: 0.04em 0em 0em black, 0.04em 0.04em 0em black;
     }
   }
   @keyframes osc {
@@ -47,7 +54,7 @@
       text-shadow: 0px 0px 0px #990000;
     }
     100% {
-      text-shadow: 0.04em 0em 0em black, 0.04em 0.04em 0em black, 0.1em 0em 0px #006699, 0.2em 0.0809016994em 0px #000a99, 0.3em 0.0618033989em 0px #520099, 0.4em -0.0927050983em 0px #990085, 0.5em -0.3236067977em 0px #990029, 0.6em -0.5em 0px #993300, 0.7em -0.4854101966em 0px #998f00, 0.8em -0.2163118961em 0px #479900, 0.9em 0.2472135955em 0px #009914, 1em 0.7281152949em 0px #009970, 1.1em 1em 0px #006699;
+      text-shadow: 0.04em 0em 0em black, 0.04em 0.04em 0em black;
     }
   }
   .splash-screen aside {
@@ -55,30 +62,47 @@
     right: 1em;
     bottom: 0em;
     background-color: var(--color-background);
-    align-self: flex-end;
-    margin: calc(2 * var(--m-big));
-    box-shadow: 5px 5px 0px white;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    margin: calc(2.0* var(--m-big));
+    -webkit-box-shadow: 5px 5px 0px white;
+            box-shadow: 5px 5px 0px white;
   }
   .splash-screen aside p {
-    transform: rotate(-9deg) translateY(-10px);
+    -webkit-transform: rotate(-9deg) translateY(-10px);
+            transform: rotate(-9deg) translateY(-10px);
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
     transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s;
   }
   .splash-screen aside p:hover {
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
     transition: transform 1s;
-    transform: rotate(9deg);
+    transition: transform 1s, -webkit-transform 1s;
+    -webkit-transform: rotate(9deg);
+            transform: rotate(9deg);
   }
   .splash-screen aside quote {
     color: black;
     background-color: white;
     font-weight: 400;
-    transform: skew(-15deg) rotate(-9deg);
-    box-shadow: 5px 5px 0px black;
+    -webkit-transform: skew(-15deg) rotate(-9deg);
+            transform: skew(-15deg) rotate(-9deg);
+    -webkit-box-shadow: 5px 5px 0px black;
+            box-shadow: 5px 5px 0px black;
   }
 }
+
 @media (min-width: 1000px) {
   .splash-screen h1 {
-    transform: translateX(0.9em) translateY(0em);
+    -webkit-transform: translateX(0.9em) translateY(0em);
+            transform: translateX(0.9em) translateY(0em);
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
     transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s;
   }
 }
 /*# sourceMappingURL=splash.css.map */
