--- a/css/splash.sass
+++ b/css/splash.sass
@@ -10,12 +10,14 @@ $image-height: 4912px
     display: flex
     color: var(--color-header)
     background: top / 100% no-repeat url("../resources/much.jpg")
+    padding: 0 2em
 
     @media (max-width: 750px)
         h1
             text-align: center
             font-size: 400%
             font-weight: 900
+            margin: auto
 
         aside
             display: none
