--- a/css/frontsection.css
+++ b/css/frontsection.css
@@ -1,5 +1,36 @@
-main.frontpage .article-section {
-  padding-block: 1em;
+@media (orientation: landscape) {
+  main.frontpage .lead {
+    -webkit-transition-duration: 400ms;
+            transition-duration: 400ms;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out;
+    -webkit-transform: translateX(100vw);
+            transform: translateX(100vw);
+  }
+  main.frontpage .lead.inview {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@media (orientation: landscape) {
+  main.frontpage .article-section {
+    padding-top: 2em;
+  }
+}
+
+@media (orientation: portrait) {
+  main.frontpage .article-section {
+    padding-top: 4em;
+  }
+}
+
+main.frontpage .article-section > p:not(.section-text) {
+  text-indent: 0px;
 }
 
 main.frontpage .article-section .section-header {
