--- a/css/frontsection.sass
+++ b/css/frontsection.sass
@@ -1,5 +1,22 @@
+@media (orientation: landscape)
+    main.frontpage .lead
+        transition-duration: 400ms
+        transition-property: transform
+        transition-timing-function: ease-out
+        transform: translateX(100vw)
+    
+        &.inview
+            transform: translateX(0px)
+
 main.frontpage .article-section
-    padding-block: 1em
+    @media (orientation: landscape)
+        padding-top: 2em
+
+    @media (orientation: portrait)
+        padding-top: 4em
+
+    &>p:not(.section-text)
+        text-indent: 0px
 
     .section-header
         text-indent: none
@@ -9,6 +26,7 @@ main.frontpage .article-section
         font-size: 2em
     .section-location
         padding-block: 1em
+
     .section-text
         line-height: 1.6
         font-size: 1.3em
