--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,139 @@
+@charset "UTF-8";
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: black;
+  color: white;
+  font-size: .7em;
+  padding: 0 1em;
+}
+
+.footer h3 {
+  display: inline-block;
+  font-size: 1.9em;
+  padding: 0.5em;
+}
+
+.footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: auto;
+}
+
+.footer div.details a::before {
+  color: white;
+  display: inline-block;
+  content: '•';
+  padding: 0.5em;
+}
+
+.footer div.sitemap span {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer span h3 {
+  font-size: 1.4em;
+  padding: 0 0.6em;
+}
+
+.footer span ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer span ul li {
+  display: block;
+  padding: 0.5em 2em;
+}
+
+.footer span ul a, .footer span ul h4 {
+  text-decoration: underline;
+  color: white;
+  font-size: 1.0em;
+}
+
+.footer span ul a:hover, .footer span ul h4:hover {
+  cursor: pointer;
+  color: blue;
+}
+
+.section-explore {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.section-explore .section-header {
+  visibility: hidden;
+}
+
+.section-explore .section-link {
+  margin-left: auto;
+  justify-text: right;
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+  color: blue;
+  font-size: 1.5em;
+  padding: 3em 1em;
+}
+
+.section-explore .section-link:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .goto-top {
   display: -webkit-box;
   display: -ms-flexbox;
