--- a/css/main.sass
+++ b/css/main.sass
@@ -1,3 +1,82 @@
+.footer
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    align-items: flex-start
+    justify-content: center
+
+    background-color: black
+    color: white
+
+    font-size: .7em
+    padding: 0 1em
+
+    h3
+        display: inline-block
+        font-size: 1.9em
+        padding: 0.5em
+
+    div
+        display: flex
+        flex-direction: column
+        margin-right: auto
+
+        &.details
+            a::before
+                color: white
+                display: inline-block
+                content: '•'
+                padding: 0.5em
+
+        &.sitemap
+            span
+                flex-direction: column
+    span
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap
+
+        h3
+            font-size: 1.4em
+            padding: 0 0.6em
+
+        ul
+            display: flex
+            flex-direction: column
+            li
+                display: block
+                padding: 0.5em 2em
+            a,h4
+                text-decoration: underline
+                color: white
+                font-size: 1.0em
+                &:hover
+                    cursor: pointer
+                    color: blue
+
+.section-explore
+    display: flex
+    flex-direction: column
+    flex-wrap: wrap
+    justify-content: stretch
+    align-items: center
+    width: 100%
+
+    .section-header
+        visibility: hidden
+
+    .section-link
+        margin-left: auto
+        justify-text: right
+        align-self: stretch
+        color: blue
+        font-size: 1.5em
+        padding: 3em 1em
+
+        &:hover
+            text-decoration: underline
+            cursor: pointer
+
 .goto-top
     display: flex
     position: fixed
