--- a/css/nav.sass
+++ b/css/nav.sass
@@ -17,18 +17,24 @@ header
     position: -webkit-sticky
     top: 0
     z-index: 101
+    height: 4em
 
 header nav
     //@include flex.flex-center-row
-    display: block
+    display: flex
+    justify-content: flex-start
+    align-items: center
     background: black
+    height: 4em
 
     a
         display: block
+        margin: auto 1em
         font-weight: 300
         color: white
-        padding: 0px 1rem
         text-decoration: underline
 
-        @media (min-width: 768px)
-            padding: $p-big
+        &:hover
+            color: blue
+            cursor: pointer
+
