--- a/css/splash.css
+++ b/css/splash.css
@@ -4,6 +4,7 @@
   display: flex;
   color: var(--color-header);
   background: top/100% no-repeat url("../resources/much.jpg");
+  padding: 0 2em;
 }
 
 @media (max-width: 750px) {
@@ -11,6 +12,7 @@
     text-align: center;
     font-size: 400%;
     font-weight: 900;
+    margin: auto;
   }
   .splash-screen aside {
     display: none;
