added some basic threeJS graphic simulations and svg filter testing

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,10 @@
     flex-direction: column;
   }
 
+  [hidden]:is(header, footer, main) {
+    display:none;
+  }
+
   header aside {
     display: flex;
     flex-direction: column;
